--- a/articles/ABC187.md
+++ b/articles/ABC187.md
@@ -3,7 +3,7 @@ title: "ABC187 メモ[python]"
 emoji: "✨"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["atcoder","競プロ","python"]
-published: True
+published: true
 ---
 
 # A - Large Digits 
